unpackaged/main/default/objects/Lead/fields/adroll__ClickCosts__c.field-meta.xml
<CustomField>
    <fullName>adroll__ClickCosts__c</fullName>
    <description>Costs Incurred for the Clicks</description>
    <inlineHelpText>Costs Incurred for the Clicks</inlineHelpText>
    <label>Lead Click Costs (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>