unpackaged/main/default/objects/Lead/fields/Auto_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Auto_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Polytomic, and checked TRUE if the Lead record becomes linked with a Matched Contact or Account. This toggle is to prevent Apex conversion errors from occurring when a large batch of leads are created at once.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Updated by Polytomic, and checked TRUE if the Lead record becomes linked with a Matched Contact or Account. This toggle is to prevent Apex conversion errors from occurring when a large batch of leads are created at once.</inlineHelpText>
    <label>Auto Conversion?</label>
    <type>Checkbox</type>
</CustomField>