unpackaged/main/default/objects/Lead/fields/bombora_data__Strongest_Intent_Cluster__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Strongest_Intent_Cluster__c</fullName>
    <description>This will show which cluster has the most intent activity on a given Lead and can be used in routing records into workflows based on the cluster.</description>
    <inlineHelpText>The topic cluster with the highest active &quot;Topic Count&quot; for this business</inlineHelpText>
    <label>Strongest Intent Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>