unpackaged/main/default/objects/Lead/fields/ChampifyIo__Champify_Engaged__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Champify_Engaged__c</fullName>
    <formula>ChampifyIo__Is_a_Champify__c &amp;&amp; ( LastActivityDate &gt;= ChampifyIo__Job_Change_Detected_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champify Engaged</label>
    <type>Checkbox</type>
</CustomField>