unpackaged/main/default/objects/Lead/fields/ChampifyIo__Champify_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Champify_LinkedIn_URL__c</fullName>
    <label>Champify LinkedIn URL</label>
    <type>Url</type>
</CustomField>