unpackaged/main/default/objects/Lead/fields/ChampifyIo__Champify_Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Champify_Sync_Id__c</fullName>
    <label>Champify Sync Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>