unpackaged/main/default/objects/Lead/fields/ChampifyIo__ChampifyScore__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ChampifyScore__c</fullName>
    <label>Champify Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>