unpackaged/main/default/objects/Lead/fields/ChampifyIo__clean_name__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__clean_name__c</fullName>
    <formula>/* AUTOGENERATED, DO NOT EDIT */TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(IF(CONTAINS(IF(CONTAINS(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company),&#39; - &#39;), LEFT(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company), FIND(&#39; - &#39;,IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)) - 1),IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)),&#39;,&#39;), LEFT(IF(CONTAINS(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company),&#39; - &#39;), LEFT(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company), FIND(&#39; - &#39;,IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)) - 1),IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)), FIND(&#39;,&#39;,IF(CONTAINS(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company),&#39; - &#39;), LEFT(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company), FIND(&#39; - &#39;,IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)) - 1),IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company))) - 1),IF(CONTAINS(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company),&#39; - &#39;), LEFT(IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company), FIND(&#39; - &#39;,IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)) - 1),IF(CONTAINS(Company,&#39;(&#39;), LEFT(Company, FIND(&#39;(&#39;,Company) - 1),Company)))), &#39; incorporated&#39;, &#39;&#39;), &#39; corporation&#39;, &#39;&#39;), &#39; limited&#39;, &#39;&#39;), &#39; corp.&#39;, &#39;&#39;), &#39; corp&#39;, &#39;&#39;), &#39; gmbh&#39;, &#39;&#39;), &#39; inc.&#39;, &#39;&#39;), &#39; ltd.&#39;, &#39;&#39;), &#39; inc&#39;, &#39;&#39;), &#39; llc&#39;, &#39;&#39;), &#39; ltd&#39;, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champify Company Clean Name</label>
    <type>Text</type>
</CustomField>