unpackaged/main/default/objects/Lead/fields/ChampifyIo__GetIntroFrom__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__GetIntroFrom__c</fullName>
    <label>Champify Get Intro From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>