unpackaged/main/default/objects/Lead/fields/ChampifyIo__Is_a_Champify__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Is_a_Champify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Champify</label>
    <type>Checkbox</type>
</CustomField>