unpackaged/main/default/objects/Lead/fields/ChampifyIo__Job_Change_Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Job_Change_Detected_Date__c</fullName>
    <label>Champify Job Change Surfaced At</label>
    <type>Date</type>
</CustomField>