unpackaged/main/default/objects/Lead/fields/ChampifyIo__No_Longer_At_Company__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__No_Longer_At_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Champify No Longer At Company</label>
    <type>Checkbox</type>
</CustomField>