unpackaged/main/default/objects/Lead/fields/ChampifyIo__Past_Account__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Past_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champify Past Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Champify_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>