unpackaged/main/default/objects/Lead/fields/ChampifyIo__Previous_Relationship__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Previous_Relationship__c</fullName>
    <label>Champify Previous Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>