unpackaged/main/default/objects/Lead/fields/Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Country Definition record.</description>
    <inlineHelpText>Related Country Definition record.</inlineHelpText>
    <label>Country Definition</label>
    <referenceTo>Country_Definition__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>