unpackaged/main/default/objects/Lead/fields/CP_Don_t_Show_Calendar__c.field-meta.xml
<CustomField>
    <fullName>CP_Don_t_Show_Calendar__c</fullName>
    <formula>IF(
ISPICKVAL(Employee_Picklist__c,&quot;1-25&quot;) || ISPICKVAL(Employee_Picklist__c,&quot;26-50&quot;) || ISBLANK(TEXT( Employee_Picklist__c)) || ISPICKVAL(Email_Domain_Type__c, &quot;Public&quot;) || ISPICKVAL(Email_Domain_Type__c, &quot;Education&quot;)

,

TRUE,
FALSE
)</formula>
    <label>CP Don&#39;t Show Calendar</label>
    <type>Checkbox</type>
</CustomField>