unpackaged/main/default/objects/Lead/fields/Email_Domain_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Type__c</fullName>
    <label>Email Domain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domain_Types</valueSetName>
    </valueSet>
</CustomField>