unpackaged/main/default/objects/Lead/fields/Employee_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Employee_Picklist__c</fullName>
    <inlineHelpText>Set by a demo request form fill</inlineHelpText>
    <label>Employee Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Count_Range</valueSetName>
    </valueSet>
</CustomField>