unpackaged/main/default/objects/Lead/fields/Enrichment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Date__c</fullName>
    <description>Date field that logs when the lead Enrichment Status date was last updated.</description>
    <inlineHelpText>Date field that logs when the lead Enrichment Status date was last updated.</inlineHelpText>
    <label>Enrichment Date</label>
    <type>Date</type>
</CustomField>