unpackaged/main/default/objects/Lead/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>Indicates the next steps for enrichment. &#39;Block Enrichment&#39; will exclude the record from LeanData routing/conversion logic.</description>
    <inlineHelpText>Indicates the next steps for enrichment. &#39;Block Enrichment&#39; will exclude the record from LeanData routing/conversion logic.</inlineHelpText>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block Enrichment</fullName>
            </value>
            <value>
                <fullName>Allow Enrichment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>