unpackaged/main/default/objects/Lead/fields/Intermediate_Region__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Region__c</fullName>
    <description>Intermediate Region derived from Country Definition.</description>
    <inlineHelpText>Intermediate Region derived from Country Definition.</inlineHelpText>
    <label>Intermediate Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Intermediate_Region</valueSetName>
    </valueSet>
</CustomField>