unpackaged/main/default/objects/Lead/fields/Lead_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID (case safe)</label>
    <type>Text</type>
</CustomField>