unpackaged/main/default/objects/Lead/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <inlineHelpText>If Clearbit can&#39;t find in field above, populate this field</inlineHelpText>
    <label>LinkedIn (Person)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>