unpackaged/main/default/objects/Lead/fields/Matched_Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Website__c</fullName>
    <inlineHelpText>Populated if LaneFour matches this lead to an existing Account</inlineHelpText>
    <label>Matched Account Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>