unpackaged/main/default/objects/Lead/fields/Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record Id used to convert Lead record.</description>
    <inlineHelpText>Contact record Id used to convert Lead record.</inlineHelpText>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Matched Contact)</relationshipLabel>
    <relationshipName>Lead_to_Contact_Match</relationshipName>
    <type>Lookup</type>
</CustomField>