unpackaged/main/default/objects/Lead/fields/Meeting_Page_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Page_Source__c</fullName>
    <inlineHelpText>The page where the demo request originated from</inlineHelpText>
    <label>Meeting Page Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>