unpackaged/main/default/objects/Lead/fields/MK_Lead_Engagement_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Engagement_Segment__c</fullName>
    <description>MadKudu Engagement segment (very high, high, medium, low) based on the analysis of the lead behavior on your website, product, marketing content...
Scoring model controllable on MadKudu&#39;s platform app.madkudu.com</description>
    <inlineHelpText>Possible values: very high, high, medium, low. Focus on the most engaged leads.</inlineHelpText>
    <label>MK Lead Engagement Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>very high</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>very high</label>
            </value>
            <value>
                <fullName>high</fullName>
                <color>#66E9BD</color>
                <label>high</label>
            </value>
            <value>
                <fullName>medium</fullName>
                <color>#F3D904</color>
                <label>medium</label>
            </value>
            <value>
                <fullName>low</fullName>
                <color>#A53711</color>
                <label>low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>