unpackaged/main/default/objects/Lead/fields/MK_Lead_Engagement_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Engagement_Signals__c</fullName>
    <description>Reasons for the MadKudu Engagement and latest activities
Signals configurable on MadKudu&#39;s platform app.madkudu.com</description>
    <inlineHelpText>Reasons for the MK Lead Engagement score, and latest activities of the lead.
Signals customizable on MadKudu&#39;s platform</inlineHelpText>
    <label>MK Lead Engagement Signals</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>