unpackaged/main/default/objects/Lead/fields/Needs_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Lead record needs to be enriched for routing.</description>
    <inlineHelpText>Indicates whether the Lead record needs to be enriched for routing.</inlineHelpText>
    <label>Needs Enrichment?</label>
    <type>Checkbox</type>
</CustomField>