unpackaged/main/default/objects/Lead/fields/Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes__c</fullName>
    <description>Pace for system stamped or bulk upload notes for RevOps</description>
    <label>Ops Notes</label>
    <type>TextArea</type>
</CustomField>