unpackaged/main/default/objects/Lead/fields/Opt_Out_Marketing_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Marketing_Date__c</fullName>
    <label>Opt Out (Marketing) Date</label>
    <type>Date</type>
</CustomField>