unpackaged/main/default/objects/Lead/fields/Opt_Out_Product__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Product__c</fullName>
    <label>Opt Out (Product)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>