unpackaged/main/default/objects/Lead/fields/Opt_Out_Sales__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Sales__c</fullName>
    <label>Opt Out (Sales)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>