unpackaged/main/default/objects/Lead/fields/pw_ccpro__LocationSource__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__LocationSource__c</fullName>
    <label>Location Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>