unpackaged/main/default/objects/Lead/fields/Reason_for_Demo__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Demo__c</fullName>
    <label>Reason for Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Explore Retool Enterprise</fullName>
            </value>
            <value>
                <fullName>Explore a Retool Use Case</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>I need guidance building an app</fullName>
                <isActive>false</isActive>
                <label>I need guidance building an app</label>
            </value>
            <value>
                <fullName>I’m curious about pricing</fullName>
                <isActive>false</isActive>
                <label>I’m curious about pricing</label>
            </value>
            <value>
                <fullName>Just looking to learn how Retool works</fullName>
                <isActive>false</isActive>
                <label>Just looking to learn how Retool works</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other (See Notes Field)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>