unpackaged/main/default/objects/Lead/fields/regieai__Added_By_Regie__c.field-meta.xml
<CustomField>
    <fullName>regieai__Added_By_Regie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added By Regie</label>
    <type>Checkbox</type>
</CustomField>