unpackaged/main/default/objects/Lead/fields/regieai__Regie_Persona__c.field-meta.xml
<CustomField>
    <fullName>regieai__Regie_Persona__c</fullName>
    <label>Regie Persona</label>
    <length>200</length>
    <type>Text</type>
</CustomField>