unpackaged/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region derived from Country Definition.</description>
    <inlineHelpText>Region derived from Country Definition.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>