unpackaged/main/default/objects/Lead/fields/ROE_Territory__c.field-meta.xml
<CustomField>
    <fullName>ROE_Territory__c</fullName>
    <description>Returns the current ROE Territory assigned to the Lead based on Subregion__c. Used to ensure that leads created from Chili Piper are routed correctly.

External Systems Utillization: Chili Piper</description>
    <formula>CASE( Region__c ,
&quot;AMER&quot;,&quot;ROW&quot;,
&quot;EMEA&quot;,&quot;EUR&quot;,
&quot;APAC&quot;,&quot;APAC&quot;,
&quot;ROW&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the current ROE Territory assigned to the Lead based on Subregion__c. Used to ensure that leads created from Chili Piper are routed correctly.</inlineHelpText>
    <label>ROE Territory</label>
    <type>Text</type>
</CustomField>