unpackaged/main/default/objects/Lead/fields/SalesLoft_Status__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Status__c</fullName>
    <description>This is a field that is written via Salesloft in response to how people react to our Outreach emails. Based on people being sequenced, replying, opting out, etc. the status will update and have an impact on the lead lifecycle model</description>
    <label>zSalesLoft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Attempting Outreach</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Opp Identified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>