unpackaged/main/default/objects/Lead/fields/splashthat__Splash_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Contact Id in splash to map with a corresponding Lead</description>
    <externalId>true</externalId>
    <label>Splash Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>