unpackaged/main/default/objects/Lead/fields/splashthat__Splash_Unsubscribe_From_Org__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Unsubscribe_From_Org__c</fullName>
    <description>Field to map Unsubscribe from an organization in Splash to a Lead in SF</description>
    <label>Splash Unsubscribe From Organization</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>