unpackaged/main/default/objects/Lead/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <description>Subregion derived from Country Definition.</description>
    <inlineHelpText>Subregion derived from Country Definition.</inlineHelpText>
    <label>Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>